# SO2-Projekt3

./: .gitignore  CMakeLists.txt  Crane.cpp  Crane.hpp  Light.hpp  Ocean.cpp  Ocean.hpp  Port.cpp  Port.hpp  README.md  RandCoeffcients.cpp  RandCoeffcients.hpp  Ship.cpp  Ship.hpp  Sluice.cpp  Sluice.hpp  TrafficLights.cpp  TrafficLights.hpp  Truck.cpp  Truck.hpp  Ui.cpp  Ui.hpp  Warehouse.cpp  Warehouse.hpp  WaterGate.cpp  WaterGate.hpp  main.cpp
